@@ -1,4 +1,6 @@
-#!/bin/sh -e
+#!/bin/sh
+set -e
+
 if [ ! -e /usr/local/lib/ocaml ]; then
     if mkdir /usr/local/lib/ocaml 2>/dev/null; then
 	chown root:staff /usr/local/lib/ocaml
