@@ -1,4 +1,0 @@
-usr/bin
-usr/share/man/man1
-usr/share/pixmaps
-@OCamlStdlibDir@
