@@ -1,12 +1,6 @@
-#!/bin/sh -e
+#!/bin/sh
+set -e
 
 rm -f /usr/include/caml
-
-# TEMPORARILY DISABLED while moving ocaml-md5sums to dh-ocaml
-#if [ "$1" = "remove" ]; then
-#  if [ -x /usr/bin/ocaml-md5sums ]; then
-#    /usr/bin/ocaml-md5sums update
-#  fi
-#fi
 
 #DEBHELPER#
