@@ -1,5 +1,6 @@
 ocaml (3.11.1-3) UNRELEASED; urgency=low
 
+  [ Mehdi Dogguy ]
   * Add two tools:
     - ocamlbyteinfo to read content of bytecode binaries
     - ocamlplugininfo to read content of shared object files (.cmxs)
@@ -9,6 +10,14 @@ ocaml (3.11.1-3) UNRELEASED; urgency=low
     they are not used
   * Add myself to Uploaders and update Stéphane's address
   * Remove DMUA
+
+  [ Stéphane Glondu ]
+  * Add build-dependency to autotools-dev (for up-to-date config.*)
+  * Maintainer scripts:
+    - explicitly use set -e
+    - remove references to ocaml-md5sums, as its jobs is handled by
+      dh_ocaml, now
+  * Remove all debian/*.dirs* files to avoid empty directories
 
  -- Mehdi Dogguy <mehdi@debian.org>  Tue, 21 Jul 2009 17:09:31 +0200
 
